--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,9 @@
               "src/assets",
               "src/mockServiceWorker.js"
             ],
+             "styles": [
+              "src/styles.css"
+            ],
            
             "scripts": []
           },
